# GORBIE

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  design.md
assets/fonts/IosevkaGorbie/: private-build-plans.toml
assets/fonts/NewComputerModern/: LICENSE.txt
assets/fonts/Yarndings_20/: OFL.txt
assets/syntax/: ral_dark.tmTheme  ral_light.tmTheme
docs/: widgets.md
examples/: candle.rs  cubecl_cpu_repro.rs  dashboard_widgets.rs  diagnostics.rs  entity_inspector.rs  globe.rs  grid_demo.rs  grid_demo_headless.rs  intro.rs  minla.rs  multi_state.rs  pile_inspector.rs  playbook.rs  playground_chat.rs  polars.rs  schema_inspector.rs  spatial_motor.rs  spatial_pga.rs  spatial_pile_resolver.rs  spatial_resolver.rs  spatial_roundtrip.rs  spatial_sclerp.rs  telemetry_viewer.rs  triblespace_best_practices.rs  vanja.rs  wiki_viewer.rs
examples/teaching/: hello_expressions.rs  hello_state.rs  overview.rs
gorbie-macros/: Cargo.toml
gorbie-macros/src/: lib.rs
notebooks/: candle.rs  intro.rs  polars.rs
src/: card_ctx.rs  cards.rs  dataflow.rs  design.md  floating.rs  headless.rs  lib.rs  main.rs  prelude.rs  search.rs  state.rs  telemetry.rs  themes.rs  widgets.rs
src/cards/: markdown_card.rs  reactive_card.rs  stateful_card.rs  stateless_card.rs
src/themes/: colorhash.rs  ral.rs  style.rs
src/widgets/: budget_gauge.rs  button.rs  code.rs  collapsing_divider.rs  dataframe.rs  event_feed.rs  field.rs  histogram.rs  label.rs  load.rs  marginalia.rs  markdown.rs  metric_strip.rs  progress.rs  slider.rs  stream_lane.rs  table.rs  table_layout.rs  table_sizing.rs  triblespace.rs  typst_widget.rs
src/widgets/triblespace/: commit_history.rs  entity_inspector.rs  pile_overview.rs  pile_repo.rs  pile_tail.rs
src/widgets/typst_render/: mod.rs  outline.rs  painter.rs  world.rs
