[package]
name = "GORBIE"
description = "GORBIE! Is a minimalist notebook library for Rust."
version = "0.5.2"
edition = "2021"
authors = ["Jan-Paul Bultmann <jp@bultmann.eu>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gorbie"
homepage = "https://github.com/triblespace/GORBIE"
repository = "https://github.com/triblespace/GORBIE"
include = [
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "INVENTORY.md",
    "src/**/*.rs",
    "examples/*.rs",
    "assets/icon_dark.png",
    "assets/icon_light.png",
    "assets/gorbie.png",
    "assets/syntax/*.tmTheme",
    "assets/datasets/iris.csv",
    "assets/fonts/IosevkaGorbie/IosevkaGorbie-Regular.ttf",
    "assets/fonts/IosevkaGorbie/IosevkaGorbie-Bold.ttf",
    "assets/fonts/Jersey_15/Jersey15-Regular.ttf",
    "assets/fonts/Jersey_15/OFL.txt",
]

[dependencies]
gorbie-macros = { version = "0.2.1" }
eframe = { version = "0.33", features = ["persistence", "wgpu"] }
egui = { version = "0.33", features = ["color-hex"] }
egui-wgpu = "0.33.3"
ctrlc = {version="3.4", features=["termination"]}
dark-light = "2"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
log = "0.4.26"
tracing = "0.1.44"
png = "0.18"
pollster = "0.4"
egui_commonmark = { package = "gorbie-commonmark", version = "0.22.1", features = ["better_syntax_highlighting", "svg", "fetch"], optional = true }
egui_plot = { version = "0.34", optional = true }
triblespace = { version = "0.9.0", optional = true }
polars = { version = "0.52.0", optional = true, features = ["lazy", "sql", "polars-ops"] }
rapier2d = { version = "0.32", optional = true }
hifitime = { version = "4.2.3", optional = true }
cubecl = { version = "0.9.0", default-features = false, features = ["wgpu", "std"], optional = true }
ed25519-dalek = { version = "2.1.1", optional = true }
rand_core06 = { package = "rand_core", version = "0.6.4", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true, features = ["env-filter"] }

[features]
default = ["markdown"]
serde = []
accesskit = []
markdown = ["dep:egui_commonmark"]
polars = ["dep:polars"]
plots = ["dep:egui_plot"]
triblespace = ["dep:triblespace", "dep:ed25519-dalek", "dep:rand_core06"]
gloss = ["triblespace", "dep:hifitime", "dep:rapier2d"]
cubecl = ["dep:cubecl"]
telemetry = ["triblespace", "dep:tracing-subscriber"]

[workspace]
members = ["gorbie-macros"]
exclude = ["gorbie_commonmark"]


[dev-dependencies]
ed25519-dalek = "2.1.1"
rand_core = "0.9.5"

[[example]]
name = "polars"
required-features = ["polars"]

[[example]]
name = "pile_inspector"
required-features = ["gloss"]

[[example]]
name = "entity_inspector"
required-features = ["triblespace"]

[[example]]
name = "schema_inspector"
required-features = ["triblespace"]

[[example]]
name = "minla"
required-features = ["cubecl", "plots"]

[[example]]
name = "telemetry_viewer"
required-features = ["telemetry"]

[[example]]
name = "triblespace_best_practices"
required-features = ["triblespace"]
