[package]
name = "GORBIE"
description = "GORBIE! Is a minimalist notebook library for Rust."
version = "0.18.1"
edition = "2021"
authors = ["Jan-Paul Bultmann <jp@bultmann.eu>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gorbie"
homepage = "https://github.com/triblespace/GORBIE"
repository = "https://github.com/triblespace/GORBIE"
include = [
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "INVENTORY.md",
    "src/**/*.rs",
    "examples/*.rs",
    "assets/icon_dark.png",
    "assets/icon_light.png",
    "assets/gorbie.png",
    "assets/syntax/*.tmTheme",
    "assets/datasets/iris.csv",
    "assets/fonts/IosevkaGorbie/IosevkaGorbie-Regular.ttf",
    "assets/fonts/IosevkaGorbie/IosevkaGorbie-Bold.ttf",
    "assets/fonts/Jersey_15/Jersey15-Regular.ttf",
    "assets/fonts/Jersey_15/OFL.txt",
    "assets/fonts/NewComputerModern/NewCMMath-Regular.otf",
    "assets/fonts/NewComputerModern/LICENSE.txt",
]

[dependencies]
gorbie-macros = { version = "0.9.0", path = "gorbie-macros" }
eframe = { version = "0.34", features = ["persistence", "wgpu"] }
egui = { version = "0.34", features = ["color-hex"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
log = "0.4.26"
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-wgpu = "0.34"
ctrlc = { version = "3.4", features = ["termination"] }
dark-light = "2"
png = "0.18"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Document", "Window", "Element"] }

[dependencies.egui_commonmark]
package = "gorbie-commonmark"
version = "0.24.0"
path = "../gorbie_commonmark/egui_commonmark"
features = ["better_syntax_highlighting", "svg", "fetch"]
optional = true

[dependencies.egui_plot]
version = "0.35"
optional = true

[dependencies.triblespace]
version = "0.47"
path = "../triblespace-rs"
optional = true

[dependencies.polars]
version = "0.52.0"
optional = true
features = ["lazy", "sql", "polars-ops"]

[dependencies.rapier2d]
version = "0.32"
optional = true

[dependencies.hifitime]
version = "4.2.3"
optional = true

[dependencies.cubecl]
version = "0.10.0"
default-features = false
features = ["wgpu", "std"]
optional = true

[dependencies.ed25519-dalek]
version = "2.1.1"
optional = true

[dependencies.rand_core06]
package = "rand_core"
version = "0.6.4"
optional = true

[dependencies.typst]
version = "0.14"
optional = true

[dependencies.typst-syntax]
version = "0.14"
optional = true

[dependencies.ttf-parser]
version = "0.25"
optional = true

[dependencies.earcutr]
version = "0.5"
optional = true

[dependencies.egui_graphs]
version = "0.29.0"
features = ["events"]
optional = true

[dependencies.comemo]
version = "0.5.1"
optional = true

[features]
default = ["markdown"]
serde = []
accesskit = []
markdown = ["dep:egui_commonmark"]
polars = ["dep:polars"]
plots = ["dep:egui_plot"]
triblespace = ["dep:triblespace", "dep:ed25519-dalek", "dep:rand_core06"]
gloss = ["triblespace", "dep:hifitime", "dep:rapier2d"]
cubecl = ["dep:cubecl"]
typst = ["dep:typst", "dep:typst-syntax", "dep:ttf-parser", "dep:earcutr", "dep:comemo"]
telemetry = ["triblespace", "triblespace/telemetry"]
egui_graphs = ["dep:egui_graphs"]
comemo = ["dep:comemo"]

[workspace]
members = ["gorbie-macros"]
exclude = ["gorbie_commonmark"]


[dev-dependencies]
ed25519-dalek = "2.1.1"
petgraph = "0.8.3"
rand_core = "0.9.5"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
hifitime = "4.2.3"

[[example]]
name = "globe"

[[example]]
name = "spatial_roundtrip"
required-features = ["triblespace"]

[[example]]
name = "spatial_motor"
required-features = ["triblespace"]

[[example]]
name = "spatial_sclerp"

[[example]]
name = "spatial_pga"

[[example]]
name = "polars"
required-features = ["polars"]

[[example]]
name = "pile_inspector"
required-features = ["gloss"]

[[example]]
name = "entity_inspector"
required-features = ["triblespace"]

[[example]]
name = "schema_inspector"
required-features = ["triblespace"]

[[example]]
name = "minla"
required-features = ["cubecl", "plots"]

[[example]]
name = "telemetry_viewer"
required-features = ["telemetry"]

[[example]]
name = "triblespace_best_practices"
required-features = ["triblespace"]

[[example]]
name = "wiki_viewer"
required-features = ["triblespace", "typst", "cubecl"]

[[example]]
name = "spatial_resolver"

[[example]]
name = "spatial_pile_resolver"
required-features = ["triblespace"]
